# Linux

./: .gitignore  GAMING.md  Makefile  README.md  SECURITY.md
.github/workflows/: build-iso.yml  desktop.yml
auto/: config
config/hooks/normal/: 0500-gaming.hook.chroot  0510-vscode.hook.chroot  0900-branding.hook.chroot  0920-windows-mode.hook.chroot  0930-security.hook.chroot  0940-desktop-services.hook.chroot
config/includes.chroot/etc/NetworkManager/dispatcher.d/: 50-archonsync-cake
config/includes.chroot/etc/apt/apt.conf.d/: 52archonsync-security
config/includes.chroot/etc/archonsync/: blocklist-sources.conf  hosts.seed
config/includes.chroot/etc/audit/rules.d/: archonsync.rules
config/includes.chroot/etc/default/grub.d/: 40-archonsync.cfg  45-archonsync-hardening.cfg
config/includes.chroot/etc/modprobe.d/: archonsync-blacklist.conf
config/includes.chroot/etc/modules-load.d/: archonsync.conf
config/includes.chroot/etc/nftables.d/: archonsync-qos.nft
config/includes.chroot/etc/profile.d/: 99-archonsync-umask.sh
config/includes.chroot/etc/sddm.conf.d/: 10-archonsync.conf
config/includes.chroot/etc/security/: faillock.conf  pwquality.conf
config/includes.chroot/etc/skel/.config/: kdeglobals  kscreenlockerrc  plasma-org.kde.plasma.desktop-appletsrc  plasmashellrc  powermanagementprofilesrc
config/includes.chroot/etc/sysctl.d/: 99-archonsync-network.conf  99-archonsync-security.conf  99-archonsync.conf
config/includes.chroot/etc/systemd/resolved.conf.d/: archonsync-dns.conf
config/includes.chroot/etc/systemd/system/: archonsync-antivirus.service  archonsync-antivirus.timer  archonsync-blocklist.service  archonsync-blocklist.timer  archonsync-firstboot-apps.service  archonsync-firstboot-gpu.service  archonsync-firstboot-security.service  archonsync-live-autologin.service  archonsync-qos.service  archonsync-windows-mount.service
config/includes.chroot/etc/usbguard/: usbguard-daemon.conf
config/includes.chroot/etc/xdg/autostart/: archonsync-firstrun.desktop  archonsync-setup.desktop  archonsync-welcome.desktop  archonsync-windows-setup.desktop
config/includes.chroot/usr/lib/firefox-esr/distribution/: policies.json
config/includes.chroot/usr/share/applications/: archonsync-collect-logs.desktop  archonsync-control-center.desktop  archonsync-gamemode.desktop  archonsync-hardware.desktop  archonsync-league.desktop  archonsync-settings.desktop  archonsync-taskmanager.desktop  archonsync-terminal.desktop  archonsync-unreal.desktop
config/includes.chroot/usr/share/archonsync/: layout-taskbar.js  layout-topbar.js  layout-wheel.js
config/includes.chroot/usr/share/color-schemes/: ArchonSyncDark.colors
config/includes.chroot/usr/share/pam-configs/: archonsync-faillock
config/includes.chroot/usr/share/plasma/plasmoids/org.archonsync.wheel/: metadata.json
config/includes.chroot/usr/share/plasma/plasmoids/org.archonsync.wheel/contents/config/: main.xml
config/includes.chroot/usr/share/plasma/plasmoids/org.archonsync.wheel/contents/ui/: main.qml
config/includes.chroot/usr/share/wallpapers/ArchonSync/: metadata.json
config/package-lists/: apps.list.chroot  archonsync-desktop.list.chroot  desktop.list.chroot  fallback-desktop.list.chroot  firmware.list.chroot  gpu.list.chroot  nvidia.list.chroot  productivity.list.chroot  security.list.chroot  vm-guest.list.chroot  windows.list.chroot
desktop/: .gitignore  Cargo.toml  README.md  TEST.md
desktop/assets/shaders/: ui.wgsl
desktop/crates/archon-comp/: Cargo.toml
desktop/crates/archon-comp/src/: keymap.rs  layout.rs  lib.rs  main.rs  runtime.rs  window.rs  workspace.rs
desktop/crates/archon-config/: Cargo.toml
desktop/crates/archon-config/src/: keybind.rs  lib.rs
desktop/crates/archon-gaming/: Cargo.toml
desktop/crates/archon-gaming/src/: launchers.rs  lib.rs  profile.rs
desktop/crates/archon-ipc/: Cargo.toml
desktop/crates/archon-ipc/src/: lib.rs
desktop/crates/archon-lock/: Cargo.toml
desktop/crates/archon-lock/src/: lib.rs  swipe.rs
desktop/crates/archon-shell/: Cargo.toml
desktop/crates/archon-shell/src/: dock.rs  lib.rs  main.rs  wheel.rs
desktop/crates/archon-theme/: Cargo.toml
desktop/crates/archon-theme/src/: color.rs  harmony.rs  lib.rs  palette.rs  theme.rs
desktop/crates/archon-ui/: Cargo.toml
desktop/crates/archon-ui/src/: anim.rs  lib.rs  particles.rs  render.rs  scene.rs
desktop/crates/archon-widgets/: Cargo.toml
desktop/crates/archon-widgets/src/: graph.rs  lib.rs
desktop/crates/archonctl/: Cargo.toml
desktop/crates/archonctl/src/: main.rs
desktop/session/: archonsync-session  archonsync.desktop
scripts/: build-desktop.sh  build-docker.sh  fetch-vscode.sh  install-deps.sh  test-iso.sh
