[package]
name = "archon-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop widget model for ArchonSync: placeable, resizable, rotatable, layerable widgets with glass/opaque/wallpaper-integrated surfaces."

[dependencies]
serde = { workspace = true }
archon-theme = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
