[package]
name = "archonctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line control for the ArchonSync compositor: lock, toggle the dock/wheel, switch workspaces, drive Game Mode and AI Enhance."

[dependencies]
archon-ipc = { workspace = true }

[[bin]]
name = "archonctl"
path = "src/main.rs"
